my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-eval
  labels:
    app: user-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: mysql-container
          image: datascientest/mysql-k8s:1.0.0
          ports:
            - containerPort: 3306

        - name: fastapi-container
          image: gnembac/fastapi-k8s:1.0.2
          ports:
            - containerPort: 8000
