my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: user-api
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: user-api
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
